--- a/exp_dad.qmd
+++ b/exp_dad.qmd
@@ -1,27 +1,38 @@
 ---
 title: ""
+format: html
 ---
 
 # Gráficos
 
 ## Gráfico único
 
+Para dar início as análises, vamos **carregar os pacotes necessários** para essas análises:
+
 ```{r}
-# Carregar os pacotes necessários
 library(readxl)
 library(ggplot2)
 library(dplyr)
+```
 
-# Importar os dados
+**Importando dos dados que serão analisados**
+
+```{r}
 dados <- read_excel("Trabalho final Emerson.xlsx", sheet = "Planilha1")
+```
 
-# Resumir os dados: calcular a média da severidade por tratamento e dia
+Resumir os dados: **calcular a média da severidade por tratamento e dia**
+
+```{r}
 resumo <- dados %>%
   group_by(Tratamento, Dia) %>%
   summarise(Severidade_media = mean(Severidade, na.rm = TRUE)) %>%
   ungroup()
+```
 
-# Criar o gráfico
+**Criar o gráfico**
+
+```{r}
 ggplot(resumo, aes(x = Dia, y = Severidade_media, color = Tratamento)) +
   geom_line(size = 1) +
   geom_point(size = 2) +
@@ -37,14 +48,13 @@ ggplot(resumo, aes(x = Dia, y = Severidade_media, color = Tratamento)) +
     axis.title = element_text(size = 12),
     legend.position = "right"
   )
-
 ```
 
-## Gráfico individual
+## Criando gráficos individuais
+
+Criar o gráfico facetado
 
 ```{r}
-
-# Criar o gráfico facetado
 ggplot(resumo, aes(x = Dia, y = Severidade_media)) +
   geom_line(color = "steelblue", size = 1) +
   geom_point(color = "steelblue", size = 2) +
@@ -60,5 +70,4 @@ ggplot(resumo, aes(x = Dia, y = Severidade_media)) +
     plot.title = element_text(hjust = 0.5, size = 14, face = "bold"),
     axis.title = element_text(size = 12)
   )
-
 ```
